--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
     <html>
 
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
         <title>Your Fashion</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -28,24 +31,41 @@
 
             </div>
 
-            <div class="loginBtn">
-                <a href="login.html">
-                    Log In
-                </a>
-            </div>
-            <div class="menu">
-                <ul>
-                    <li><a class="starters" href="starters.html">
-                            <h1 class="itemMenu"><i class="fa fa-home"></i></h1>
-                        </a></li>
-                    <li><a class="itemMenu" href="men.html">Men Wear</a></li>
-                    <li><a class="itemMenu" href="women.html">Women Wear</a></li>
-                    <li><a class="itemMenu" href="kids.html">Kids</a></li>
-                    <li><a class="itemMenu" href="shoes.html">Shoes</a></li>
-                    <li><a class="itemMenu" href="shoppingCart.html">Basket<ion-icon name="basket"></ion-icon><span>0</span></a></li>
-                </ul>
-           <!-- </div>
-            <div class="callWaiter">
+            
+            <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">Your Fashion</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Men</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Women</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Kid</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Footwear</a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="#">Men Shoes</a></li>
+                          <li><a class="dropdown-item" href="#">Women Shoes</a></li>
+                          <li><a class="dropdown-item" href="#">Kids Shoes</a></li>
+                        </ul>
+                      </li>
+                      <li class="nav-item" id="loginbtn">
+                        <a class="nav-link" id="loginbtn" href="#">Log In</a>
+                      </li>
+                         
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+           <!-- <div class="callWaiter">
                 <a class="callwaiterBtn">
                     <h1 class="itemMenu">Call Waiter</h1>
                 </a>
