making responsive background image.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
     </head>
 
-    <body>
+    <body class="responsive">
+      
         <script src="css/app.js"></script>
         <header>
             <div class="your-fashion-text-box">
