changing font size settings to be responsive

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <script src="css/app.js"></script>
         <header>
             <div class="your-fashion-text-box">
-                <a href="index.html" class="restname">Your Fashion</a>
+                <a href="index.html" class="shopname">Your Fashion</a>
                 
 
 
