login button repositioned

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </ul>
                       </li>
                       <li class="nav-item" id="loginbtn">
-                        <a class="nav-link" id="loginbtn" href="#">Log In</a>
+                        <a class="nav-link" id="loginbtn" href="#">login</a>
                       </li>
                          
                     </ul>
