--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Men</a>
+                        <a class="nav-link" href="men.html">Men</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#">Women</a>
