--- a/men.html
+++ b/men.html
@@ -2,44 +2,73 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>My Clothes Shop</title>
+    <title>your fashion</title>
 </head>
-<body>
-    <header>
-        <h1>Welcome to My Clothes Shop</h1>
+<body class="bod">
+    <header class="head">
+        <h1>Welcome to your fashion Shop</h1>
     </header>
-    <nav>
-        <a href="index.html">Home</a> |
-        <a href="#">Men</a> |
-        <a href="#">Women</a> |
-        <a href="#">Kids</a>
-    </nav>
-    <div class="container">
-        <div class="product">
-            <img src="product1.jpg" alt="Product 1">
-            <h2>Product 1</h2>
-            <p>Price: £29.99</p>
-            <p>Description: This is a great product.</p>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">Home</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="men.html">Men</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Women</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Kid</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Footwear</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Men Shoes</a></li>
+                  <li><a class="dropdown-item" href="#">Women Shoes</a></li>
+                  <li><a class="dropdown-item" href="#">Kids Shoes</a></li>
+                </ul>
+              </li>
+              <li class="nav-item" id="loginbtn">
+                <a class="nav-link" id="loginbtn" href="#">login</a>
+              </li>
+                 
+            </ul>
+          </div>
         </div>
-        <div class="product">
-            <img src="product2.jpg" alt="Product 2">
-            <h2>Product 2</h2>
-            <p>Price: £39.99</p>
-            <p>Description: Another awesome product.</p>
+      </nav>
+    <div class="contain">
+        <div class="prod">
+            <img class="image" src="product1.jpg" alt="Product 1">
+            <h2 class="hh">Product 1</h2>
+            <p class="para">Price: £29.99</p>
+            <p class="para">Description: This is a great product.</p>
         </div>
-        <div class="product">
-            <img src="product3.jpg" alt="Product 3">
-            <h2>Product 3</h2>
-            <p>Price: £49.99</p>
-            <p>Description: Get ready to be amazed by this product.</p>
+        <div class="prod">
+            <img class="image" src="product2.jpg" alt="Product 2">
+            <h2 class="hh">Product 2</h2>
+            <p class="para">Price: £39.99</p>
+            <p class="para">Description: Another awesome product.</p>
         </div>
-        <div class="product">
-            <img src="product4.jpg" alt="Product 4">
-            <h2>Product 3</h2>
-            <p>Price: £49.99</p>
-            <p>Description: Get ready to be amazed by this product.</p>
+        <div class="prod">
+            <img class="image" src="product3.jpg" alt="Product 3">
+            <h2 class="hh">Product 3</h2>
+            <p class="para">Price: £49.99</p>
+            <p class="para">Description: Get ready to be amazed by this product.</p>
+        </div>
+        <div class="prod">
+            <img class="image" src="product4.jpg" alt="Product 4">
+            <h2 class="hh">Product 3</h2>
+            <p class="para">Price: £49.99</p>
+            <p class="para">Description: Get ready to be amazed by this product.</p>
         </div>
     </div>
     <footer>
