Fixed the login btn position

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                           <li><a class="dropdown-item" href="#">Kids Shoes</a></li>
                         </ul>
                       </li>
-                      <li class="nav-item" id="loginbtn">
-                        <a class="nav-link" id="loginbtn" href="#">login</a>
+                      <li class="nav-item">
+                        <a class="nav-link"href="#">login</a>
                       </li>
                          
                     </ul>
