--- a/men.html
+++ b/men.html
@@ -14,7 +14,7 @@
     </header>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Home</a>
+          <a class="navbar-brand" href="#">Your Fashion</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -37,8 +37,8 @@
                   <li><a class="dropdown-item" href="#">Kids Shoes</a></li>
                 </ul>
               </li>
-              <li class="nav-item" id="loginbtn">
-                <a class="nav-link" id="loginbtn" href="#">login</a>
+              <li class="nav-item">
+                <a class="nav-link"href="#">login</a>
               </li>
                  
             </ul>
@@ -66,7 +66,19 @@
         </div>
         <div class="prod">
             <img class="image" src="product4.jpg" alt="Product 4">
-            <h2 class="hh">Product 3</h2>
+            <h2 class="hh">Product 4</h2>
+            <p class="para">Price: £49.99</p>
+            <p class="para">Description: Get ready to be amazed by this product.</p>
+        </div>
+        <div class="prod">
+            <img class="image" src="product4.jpg" alt="Product 5">
+            <h2 class="hh">Product 5</h2>
+            <p class="para">Price: £49.99</p>
+            <p class="para">Description: Get ready to be amazed by this product.</p>
+        </div>
+        <div class="prod">
+            <img class="image" src="product4.jpg" alt="Product 6">
+            <h2 class="hh">Product 6</h2>
             <p class="para">Price: £49.99</p>
             <p class="para">Description: Get ready to be amazed by this product.</p>
         </div>
