search bar is created, no styling

--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
                           <li><a class="dropdown-item" href="#">Kids Shoes</a></li>
                         </ul>
                       </li>
+                      <div class="search-container">
+                        <form action="/action_page.php">
+                          <input type="text" placeholder="Search.." name="search">
+                          <button class="sebtn" type="submit"><i class="fa fa-search"></i></button>
+                        </form>
+                      </div>
                       <li class="nav-item">
                         <a class="nav-link"href="#">login</a>
                       </li>
