--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </ul>
                       </li>
                       <div class="search-container">
-                        <form action="/action_page.php">
+                        <form action="#">
                           <input type="text" placeholder="Search.." name="search">
                           <button class="sebtn" type="submit"><i class="fa fa-search"></i></button>
                         </form>
