positioning the slideshow and the search bar

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 </div>
               </nav>
               <div class="search-bar">
-                <input type="text" placeholder="Search...">
-                <button type="submit">Search</button>
+                <input type="text" placeholder="" >
+                
             </div>
 
         </header>
