menu and slideshow are ready

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
             
             <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
                 <div class="container-fluid">
-                  <!--<i class="fas fa-cloud" style="font-size:36px;"></i>-->
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -46,7 +45,7 @@
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Footwear</a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu" id="submenu">
                           <li><a class="dropdown-item" href="#">Men Shoes</a></li>
                           <li><a class="dropdown-item" href="#">Women Shoes</a></li>
                           <li><a class="dropdown-item" href="#">Kids Shoes</a></li>
@@ -61,7 +60,7 @@
                 </div>
               </nav>
               <div class="search-bar">
-                <input type="text" placeholder="" >
+                <input type="search" placeholder="" >
                 
             </div>
 
