Women and Kids.html pages have been created.

--- a/women.html
+++ b/women.html
@@ -38,7 +38,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="women.html">Women</a>
+                        <a class="nav-link" href="men.html">men</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="kids.html">Kids</a>
