--- a/kids.html
+++ b/kids.html
@@ -38,10 +38,10 @@
                         <a class="nav-link" href="index.html">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="women.html">Women</a>
+                        <a class="nav-link" href="men.html">men</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="kids.html">Kids</a>
+                        <a class="nav-link" href="women.html">Women</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Footwear</a>
