men, women and kids.html paages are created

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Footwear</a>
                         <ul class="dropdown-menu" id="submenu">
-                          <li><a class="dropdown-item" href="#">Men Shoes</a></li>
-                          <li><a class="dropdown-item" href="#">Women Shoes</a></li>
-                          <li><a class="dropdown-item" href="#">Kids Shoes</a></li>
+                          <li><a class="dropdown-item" href="men-shoes.html">Men Shoes</a></li>
+                          <li><a class="dropdown-item" href="women-shoes.html">Women Shoes</a></li>
+                          <li><a class="dropdown-item" href="kids-shoes.html">Kids Shoes</a></li>
                         </ul>
                       </li>
 
