--- a/kids.html
+++ b/kids.html
@@ -29,19 +29,20 @@
             
             <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
                 <div class="container-fluid">
+                    <a href="index.html" class="active">Home</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="men.html">men</a>
+                        <a class="nav-link" href="men.html">Men</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="women.html">Women</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="kids.html">Kids</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Footwear</a>
