--- a/men-shoes.html
+++ b/men-shoes.html
@@ -29,6 +29,7 @@
             
             <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
                 <div class="container-fluid">
+                    <a href="index.html" class="active">Home</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                   </button>
