product cards created and searching in how to better style them to be mobile responsive

--- a/men.html
+++ b/men.html
@@ -64,7 +64,51 @@
             </div>
 
         </header>
-        
+        <br>
+        <div class="container">
+          <div class="product">
+            <img src="img/men-shirt.jpg" alt="product 1">
+            <h2>Men shirt</h2>
+            <p class="price">Price: £29.99</p>
+            <p>Description: This is a test.</p>
+            <p><button>add to cart</button></p>
+          </div>
+          <div class="product">
+            <img src="img/men-shirt2.jpg" alt="product 2">
+            <h2>Men shirt</h2>
+            <p class="price">Price: £29.99</p>
+            <p>Description: This is a test.</p>
+            <p><button>add to cart</button></p>
+          </div>
+          <div class="product">
+            <img src="img/men-shirt3.jpg" alt="product 3">
+            <h2>Men shirt</h2>
+            <p class="price">Price: £29.99</p>
+            <p>Description: This is a test.</p>
+            <p><button>add to cart</button></p>
+          </div>
+          <div class="product">
+            <img src="img/men-jeans.jpeg" alt="product 4">
+            <h2>Men shirt</h2>
+            <p class="price">Price: £29.99</p>
+            <p>Description: This is a test.</p>
+            <p><button>add to cart</button></p>
+          </div>
+          <div class="product">
+            <img src="img/men-jeans5.webp" alt="product 5">
+            <h2>Men shirt</h2>
+            <p class="price">Price: £29.99</p>
+            <p>Description: This is a test.</p>
+            <p><button>add to cart</button></p>
+          </div>
+          <div class="product">
+            <img src="img/men-jeans3.jpeg" alt="product 6">
+            <h2>Men shirt</h2>
+            <p class="price">Price: £29.99</p>
+            <p>Description: This is a test.</p>
+            <p><button>add to cart</button></p>
+          </div>
+        </div>
 
 
         <script src="js/slides.js"></script>
