fixed the products cards styling and added a pop up functionality.

--- a/men.html
+++ b/men.html
@@ -11,6 +11,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
        
 
@@ -67,51 +68,148 @@
         <br>
         <div class="container">
           <div class="product">
-            <img src="img/men-shirt.jpg" alt="product 1">
-            <h2>Men shirt</h2>
-            <p class="price">Price: £29.99</p>
-            <p>Description: This is a test.</p>
-            <p><button>add to cart</button></p>
+            <div class="product-card">
+              <h2 class="name">Men Shirt</h2>
+              <span class="price">£ 29.99</span>
+              <a class="popup-btn">Quick View</a>
+              <img src="img/men-shirt.jpg" class="product-img" alt="">
+            </div>
+            <div class="popup-view">
+              <div class="popup-card">
+                <a><i class="fas fa-times close-btn"></i></a>
+                <div class="product-img">
+                  <img src="img/men-shirt.jpg" alt="">
+                </div>
+                <div class="info">
+                  <h2>Men clothes<br><span>Men's wear</span></h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <span class="price">£ 29.99</span>
+                  <a href="#" class="add-cart-btn">Add to Cart</a>
+                  <a href="#" class="add-wish">Add to Wishlist</a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="product">
-            <img src="img/men-shirt2.jpg" alt="product 2">
-            <h2>Men shirt</h2>
-            <p class="price">Price: £29.99</p>
-            <p>Description: This is a test.</p>
-            <p><button>add to cart</button></p>
+            <div class="product-card">
+              <h2 class="name">Men Shirt</h2>
+              <span class="price">£ 23.99</span>
+              <a class="popup-btn">Quick View</a>
+              <img src="img/men-shirt2.jpg" class="product-img" alt="">
+            </div>
+            <div class="popup-view">
+              <div class="popup-card">
+                <a><i class="fas fa-times close-btn"></i></a>
+                <div class="product-img">
+                  <img src="img/men-shirt2.jpg" alt="">
+                </div>
+                <div class="info">
+                  <h2>Men clothes<br><span>Men's wear</span></h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <span class="price">£ 23.99</span>
+                  <a href="#" class="add-cart-btn">Add to Cart</a>
+                  <a href="#" class="add-wish">Add to Wishlist</a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="product">
-            <img src="img/men-shirt3.jpg" alt="product 3">
-            <h2>Men shirt</h2>
-            <p class="price">Price: £29.99</p>
-            <p>Description: This is a test.</p>
-            <p><button>add to cart</button></p>
+            <div class="product-card">
+              <h2 class="name">men shirt</h2>
+              <span class="price">£ 89.99</span>
+              <a class="popup-btn">Quick View</a>
+              <img src="img/men-shirt3.jpg" class="product-img" alt="">
+            </div>
+            <div class="popup-view">
+              <div class="popup-card">
+                <a><i class="fas fa-times close-btn"></i></a>
+                <div class="product-img">
+                  <img src="img/men-shirt3.jpg" alt="">
+                </div>
+                <div class="info">
+                  <h2>Men clothes<br><span>Men's wear</span></h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <span class="price">£ 89.99</span>
+                  <a href="#" class="add-cart-btn">Add to Cart</a>
+                  <a href="#" class="add-wish">Add to Wishlist</a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="product">
-            <img src="img/men-jeans.jpeg" alt="product 4">
-            <h2>Men shirt</h2>
-            <p class="price">Price: £29.99</p>
-            <p>Description: This is a test.</p>
-            <p><button>add to cart</button></p>
+            <div class="product-card">
+              <h2 class="name">Men jeans</h2>
+              <span class="price">£ 150.00</span>
+              <a class="popup-btn">Quick View</a>
+              <img src="img/men-jeans.jpeg" class="product-img" alt="">
+            </div>
+            <div class="popup-view">
+              <div class="popup-card">
+                <a><i class="fas fa-times close-btn"></i></a>
+                <div class="product-img">
+                  <img src="img/men-jeans.jpeg" alt="">
+                </div>
+                <div class="info">
+                  <h2>Men clothes<br><span>Men's wear</span></h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <span class="price">£150.00</span>
+                  <a href="#" class="add-cart-btn">Add to Cart</a>
+                  <a href="#" class="add-wish">Add to Wishlist</a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="product">
-            <img src="img/men-jeans5.webp" alt="product 5">
-            <h2>Men shirt</h2>
-            <p class="price">Price: £29.99</p>
-            <p>Description: This is a test.</p>
-            <p><button>add to cart</button></p>
+            <div class="product-card">
+              <h2 class="name">Men jeans</h2>
+              <span class="price">£ 50.00</span>
+              <a class="popup-btn">Quick View</a>
+              <img src="img/men-jeans3.jpeg" class="product-img" alt="">
+            </div>
+            <div class="popup-view">
+              <div class="popup-card">
+                <a><i class="fas fa-times close-btn"></i></a>
+                <div class="product-img">
+                  <img src="img/men-jeans3.jpeg" alt="">
+                </div>
+                <div class="info">
+                  <h2>Men clothes<br><span>Men's wear</span></h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <span class="price">£50.00</span>
+                  <a href="#" class="add-cart-btn">Add to Cart</a>
+                  <a href="#" class="add-wish">Add to Wishlist</a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="product">
-            <img src="img/men-jeans3.jpeg" alt="product 6">
-            <h2>Men shirt</h2>
-            <p class="price">Price: £29.99</p>
-            <p>Description: This is a test.</p>
-            <p><button>add to cart</button></p>
+            <div class="product-card">
+              <h2 class="name">Men jeans</h2>
+              <span class="price">£ 200.00</span>
+              <a class="popup-btn">Quick View</a>
+              <img src="img/men-jeans5.webp" class="product-img" alt="">
+            </div>
+            <div class="popup-view">
+              <div class="popup-card">
+                <a><i class="fas fa-times close-btn"></i></a>
+                <div class="product-img">
+                  <img src="img/men-jeans5.webp" alt="">
+                </div>
+                <div class="info">
+                  <h2>Men clothes<br><span>Men's wear</span></h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <span class="price">£200.00</span>
+                  <a href="#" class="add-cart-btn">Add to Cart</a>
+                  <a href="#" class="add-wish">Add to Wishlist</a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
 
         <script src="js/slides.js"></script>
+        <script src="js/product-cards.js"></script>
     </body>
 
     </html>
