Added contents to the products cards.

--- a/women.html
+++ b/women.html
@@ -11,7 +11,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
        
 
         <script type="text/javascript" src="js/LocalLogin.js"></script>
@@ -68,21 +68,21 @@
         <div class="container">
           <div class="product">
             <div class="product-card">
-              <h2 class="name">Men Shirt</h2>
-              <span class="price">£ 29.99</span>
+              <h2 class="name">Women blouse</h2>
+              <span class="price">£ 59.99</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-shirt.jpg" class="product-img" alt="">
+              <img src="img/women-blouse.webp" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-shirt.jpg" alt="">
+                  <img src="img/women-blouse.webp" alt="">
                 </div>
                 <div class="info">
-                  <h2>Men clothes<br><span>Men's wear</span></h2>
+                  <h2>Women clothes<br><span>Women's wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£ 29.99</span>
+                  <span class="price">£ 59.99</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -91,21 +91,21 @@
           </div>
           <div class="product">
             <div class="product-card">
-              <h2 class="name">Men Shirt</h2>
-              <span class="price">£ 23.99</span>
+              <h2 class="name">Women blouse</h2>
+              <span class="price">£ 73.99</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-shirt2.jpg" class="product-img" alt="">
+              <img src="img/women-blouse1.webp" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-shirt2.jpg" alt="">
+                  <img src="img/women-blouse1.webp" alt="">
                 </div>
                 <div class="info">
-                  <h2>Men clothes<br><span>Men's wear</span></h2>
+                  <h2>Women clothes<br><span>Women's wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£ 23.99</span>
+                  <span class="price">£ 73.99</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -114,19 +114,19 @@
           </div>
           <div class="product">
             <div class="product-card">
-              <h2 class="name">men shirt</h2>
+              <h2 class="name">Women blouse</h2>
               <span class="price">£ 89.99</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-shirt3.jpg" class="product-img" alt="">
+              <img src="img/women-blouse2.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-shirt3.jpg" alt="">
+                  <img src="img/women-blouse2.jpg" alt="">
                 </div>
                 <div class="info">
-                  <h2>Men clothes<br><span>Men's wear</span></h2>
+                  <h2>Women clothes<br><span>Women's wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                   <span class="price">£ 89.99</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
@@ -137,21 +137,21 @@
           </div>
           <div class="product">
             <div class="product-card">
-              <h2 class="name">Men jeans</h2>
-              <span class="price">£ 150.00</span>
+              <h2 class="name">Women trouser</h2>
+              <span class="price">£ 140.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-jeans.jpeg" class="product-img" alt="">
+              <img src="img/women-trouser.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-jeans.jpeg" alt="">
+                  <img src="img/women-trouser.jpg" alt="">
                 </div>
                 <div class="info">
-                  <h2>Men clothes<br><span>Men's wear</span></h2>
+                  <h2>Women clothes<br><span>Women's wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£150.00</span>
+                  <span class="price">£140.00</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -160,21 +160,21 @@
           </div>
           <div class="product">
             <div class="product-card">
-              <h2 class="name">Men jeans</h2>
-              <span class="price">£ 50.00</span>
+              <h2 class="name">Women trouser</h2>
+              <span class="price">£ 59.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-jeans3.jpeg" class="product-img" alt="">
+              <img src="img/women-blouse1.webp" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-jeans3.jpeg" alt="">
+                  <img src="img/women-blouse1.webp" alt="">
                 </div>
                 <div class="info">
-                  <h2>Men clothes<br><span>Men's wear</span></h2>
+                  <h2>Women clothes<br><span>Women's wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£50.00</span>
+                  <span class="price">£59.00</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -183,21 +183,21 @@
           </div>
           <div class="product">
             <div class="product-card">
-              <h2 class="name">Men jeans</h2>
-              <span class="price">£ 200.00</span>
+              <h2 class="name">Women trouser</h2>
+              <span class="price">£ 201.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-jeans5.webp" class="product-img" alt="">
+              <img src="img/women-trouser2.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-jeans5.webp" alt="">
+                  <img src="img/women-trouser2.jpg" alt="">
                 </div>
                 <div class="info">
-                  <h2>Men clothes<br><span>Men's wear</span></h2>
+                  <h2>Women clothes<br><span>Women's wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£200.00</span>
+                  <span class="price">£201.00</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
