--- a/women-shoes.html
+++ b/women-shoes.html
@@ -68,21 +68,21 @@
         <div class="container">
           <div class="product">
             <div class="product-card">
-              <h2 class="name">Men Shirt</h2>
-              <span class="price">£ 29.99</span>
+              <h2 class="name">Women Shoes</h2>
+              <span class="price">£ 47.99</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-shirt.jpg" class="product-img" alt="">
+              <img src="img/women-shoes.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-shirt.jpg" alt="">
+                  <img src="img/women-shoes.jpg" alt="">
                 </div>
                 <div class="info">
-                  <h2>Men clothes<br><span>Men's wear</span></h2>
+                  <h2>Women Shoes<br><span>Foot wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£ 29.99</span>
+                  <span class="price">£ 47.99</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -91,21 +91,21 @@
           </div>
           <div class="product">
             <div class="product-card">
-              <h2 class="name">Men Shirt</h2>
-              <span class="price">£ 23.99</span>
+              <h2 class="name">Women Shoes</h2>
+              <span class="price">£ 87.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-shirt2.jpg" class="product-img" alt="">
+              <img src="img/women-shoes1.jpeg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-shirt2.jpg" alt="">
+                  <img src="img/women-shoes1.jpeg" alt="">
                 </div>
                 <div class="info">
-                  <h2>Men clothes<br><span>Men's wear</span></h2>
+                  <h2>Women Shoes<br><span>Foot wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£ 23.99</span>
+                  <span class="price">£ 87.00</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -114,21 +114,21 @@
           </div>
           <div class="product">
             <div class="product-card">
-              <h2 class="name">men shirt</h2>
-              <span class="price">£ 89.99</span>
+              <h2 class="name">Women Shoes</h2>
+              <span class="price">£ 89.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-shirt3.jpg" class="product-img" alt="">
+              <img src="img/women-shoes2.webp" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-shirt3.jpg" alt="">
+                  <img src="img/women-shoes2.webp" alt="">
                 </div>
                 <div class="info">
-                  <h2>Men clothes<br><span>Men's wear</span></h2>
+                  <h2>Women Shoes<br><span>Foot wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£ 89.99</span>
+                  <span class="price">£ 89.00</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -137,21 +137,21 @@
           </div>
           <div class="product">
             <div class="product-card">
-              <h2 class="name">Men jeans</h2>
-              <span class="price">£ 150.00</span>
+              <h2 class="name">Women Shoes</h2>
+              <span class="price">£ 119.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-jeans.jpeg" class="product-img" alt="">
+              <img src="img/women-shoes3.jpg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-jeans.jpeg" alt="">
+                  <img src="img/women-shoes3.jpg" alt="">
                 </div>
                 <div class="info">
-                  <h2>Men clothes<br><span>Men's wear</span></h2>
+                  <h2>Women Shoes<br><span>Foot wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£150.00</span>
+                  <span class="price">£119.00</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -160,21 +160,21 @@
           </div>
           <div class="product">
             <div class="product-card">
-              <h2 class="name">Men jeans</h2>
-              <span class="price">£ 50.00</span>
+              <h2 class="name">Women Shoes</h2>
+              <span class="price">£ 52.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-jeans3.jpeg" class="product-img" alt="">
+              <img src="img/women-shoes4.jpeg" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-jeans3.jpeg" alt="">
+                  <img src="img/women-shoes4.jpeg" alt="">
                 </div>
                 <div class="info">
-                  <h2>Men clothes<br><span>Men's wear</span></h2>
+                  <h2>Women Shoes<br><span>Foot wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£50.00</span>
+                  <span class="price">£52.00</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -183,21 +183,21 @@
           </div>
           <div class="product">
             <div class="product-card">
-              <h2 class="name">Men jeans</h2>
-              <span class="price">£ 200.00</span>
+              <h2 class="name">Women Shoes</h2>
+              <span class="price">£ 60.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-jeans5.webp" class="product-img" alt="">
+              <img src="img/women-shoes5.webp" class="product-img" alt="">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-jeans5.webp" alt="">
+                  <img src="img/women-shoes5.webp" alt="">
                 </div>
                 <div class="info">
-                  <h2>Men clothes<br><span>Men's wear</span></h2>
+                  <h2>Women Shoes<br><span>Foot wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£200.00</span>
+                  <span class="price">£60.00</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
