--- a/men.html
+++ b/men.html
@@ -58,7 +58,7 @@
                     
                   </div>
                   <a class="login-button"href="#">login</a>
-                  <a class="add-cart-btn" href="cart.html"><i class="fa fa-shopping-cart" style="font-size:24px"></i><span>0</span></a>
+                  <a class="add-cart" href="cart.html"><i class="fa fa-shopping-cart" style="font-size:24px"></i><span>0</span></a>
                 </div>
               </nav>
               <div class="search-bar">
