Trying to debug the shopping basket code but it need more research first.

--- a/cart.html
+++ b/cart.html
@@ -78,7 +78,7 @@
             <h5 class="quantity">QUANTITY</h5>
             <h5 class="total">TOTAL</h5>
           </div>
-          <div class="products">
+          <div class="prod">
 
           </div>
         </div>
