Shopping basket almost done, now loading all items correctly.

--- a/cart.html
+++ b/cart.html
@@ -1,4 +1,4 @@
-<DOCTYPE! html>
+<!DOCTYPE html>
     <html>
 
     <head>
@@ -71,14 +71,14 @@
 
         </header>
 
-        <div class="products-container">
-          <div class="product-header">
-            <h5 class="product-title">PRODUCT</h5>
+        <div class="prods-container">
+          <div class="prod-header">
+            <h5 class="prod-title">PRODUCT</h5>
             <h5 class="price">PRICE</h5>
             <h5 class="quantity">QUANTITY</h5>
             <h5 class="total">TOTAL</h5>
           </div>
-          <div class="prod">
+          <div class="prods">
 
           </div>
         </div>
