--- a/men.html
+++ b/men.html
@@ -72,20 +72,20 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Blue Shirt</h2>
-              <span class="price">£ 29.99</span>
+              <span class="price">£29.99</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-shirt.jpg" class="product-img" alt="">
+              <img src="https://img.fruugo.com/product/2/90/617160902_max.jpg" class="product-img" alt="https://images.app.goo.gl/uHt6sGNihxAXW8h1A">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-shirt.jpg" alt="">
+                  <img src="https://img.fruugo.com/product/2/90/617160902_max.jpg" alt="https://images.app.goo.gl/uHt6sGNihxAXW8h1A">
                 </div>
                 <div class="info">
                   <h2>Men clothes<br><span>Men's wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£ 29.99</span>
+                  <span class="price">£29.99</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -95,20 +95,20 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Black Shirt</h2>
-              <span class="price">£ 23.99</span>
+              <span class="price">£23.99</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-shirt2.jpg" class="product-img" alt="">
+              <img src="https://ng.jumia.is/unsafe/fit-in/680x680/filters:fill(white)/product/85/0545391/3.jpg?5946" class="product-img" alt="https://ng.jumia.is/unsafe/fit-in/680x680/filters:fill(white)/product/85/0545391/3.jpg?5946">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-shirt2.jpg" alt="">
+                  <img src="https://ng.jumia.is/unsafe/fit-in/680x680/filters:fill(white)/product/85/0545391/3.jpg?5946" alt="https://ng.jumia.is/unsafe/fit-in/680x680/filters:fill(white)/product/85/0545391/3.jpg?5946">
                 </div>
                 <div class="info">
                   <h2>Men clothes<br><span>Men's wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£ 23.99</span>
+                  <span class="price">£23.99</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -118,20 +118,20 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">White Shirt</h2>
-              <span class="price">£ 89.99</span>
+              <span class="price">£89.99</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-shirt3.jpg" class="product-img" alt="">
+              <img src="https://img.fruugo.com/product/6/45/507046456_max.jpg" class="product-img" alt="https://img.fruugo.com/product/6/45/507046456_max.jpg">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-shirt3.jpg" alt="">
+                  <img src="https://img.fruugo.com/product/6/45/507046456_max.jpg" alt="https://img.fruugo.com/product/6/45/507046456_max.jpg">
                 </div>
                 <div class="info">
                   <h2>Men clothes<br><span>Men's wear</span></h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <span class="price">£ 89.99</span>
+                  <span class="price">£89.99</span>
                   <a href="#" class="add-cart-btn">Add to Cart</a>
                   <a href="#" class="add-wish">Add to Wishlist</a>
                 </div>
@@ -141,15 +141,15 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Denim jeans</h2>
-              <span class="price">£ 150.00</span>
+              <span class="price">£150.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-jeans.jpeg" class="product-img" alt="">
+              <img src="https://i8.amplience.net/i/egl/MensJeans-220407-slim.jpg" class="product-img" alt="https://i8.amplience.net/i/egl/MensJeans-220407-slim.jpg">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-jeans.jpeg" alt="">
+                  <img src="https://i8.amplience.net/i/egl/MensJeans-220407-slim.jpg" alt="https://i8.amplience.net/i/egl/MensJeans-220407-slim.jpg">
                 </div>
                 <div class="info">
                   <h2>Men clothes<br><span>Men's wear</span></h2>
@@ -164,15 +164,15 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Light blue jeans</h2>
-              <span class="price">£ 50.00</span>
+              <span class="price">£50.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-jeans3.jpeg" class="product-img" alt="">
+              <img src="https://eg.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/33/055233/1.jpg?5486" class="product-img" alt="https://eg.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/33/055233/1.jpg?5486">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-jeans3.jpeg" alt="">
+                  <img src="https://eg.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/33/055233/1.jpg?5486" alt="https://eg.jumia.is/unsafe/fit-in/500x500/filters:fill(white)/product/33/055233/1.jpg?5486">
                 </div>
                 <div class="info">
                   <h2>Men clothes<br><span>Men's wear</span></h2>
@@ -187,15 +187,15 @@
           <div class="product">
             <div class="product-card">
               <h2 class="name">Cotton jeans</h2>
-              <span class="price">£ 200.00</span>
+              <span class="price">£200.00</span>
               <a class="popup-btn">Quick View</a>
-              <img src="img/men-jeans5.webp" class="product-img" alt="">
+              <img src="https://static-01.daraz.pk/p/5838623fb612626ae33c2f67d1b7179c.jpg" class="product-img" alt="https://static-01.daraz.pk/p/5838623fb612626ae33c2f67d1b7179c.jpg">
             </div>
             <div class="popup-view">
               <div class="popup-card">
                 <a><i class="fas fa-times close-btn"></i></a>
                 <div class="product-img">
-                  <img src="img/men-jeans5.webp" alt="">
+                  <img src="https://static-01.daraz.pk/p/5838623fb612626ae33c2f67d1b7179c.jpg" alt="https://static-01.daraz.pk/p/5838623fb612626ae33c2f67d1b7179c.jpg">
                 </div>
                 <div class="info">
                   <h2>Men clothes<br><span>Men's wear</span></h2>
@@ -210,7 +210,7 @@
         </div>
 
 
-        <script src="js/slides.js"></script>
+      
         <script src="js/product-cards.js"></script>
         <script src="js/shopping-basket.js"></script>
     </body>
